# back-end

./: Cargo.toml  admin.html  schema.sql
src/: app_state.rs  config.rs  error.rs  main.rs
src/api/: mod.rs  router.rs
src/api/controller/: mod.rs
src/api/controller/admin/: create_room.rs  end_room.rs  index.rs  login.rs  mod.rs
src/api/controller/room/: get.rs  get_bets.rs  mod.rs
src/api/controller/user/: bet.rs  mod.rs
src/api/extractor/: jwt_admin_claims.rs  mod.rs
src/model/: account.rs  bet_info.rs  bet_kind.rs  mod.rs  room.rs
templates/: admin.stpl  bet_info.stpl  bet_infos.stpl  index.stpl  login.stpl
