[package]
name = "game_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
axum = { version = "0.7.5", features = ["macros", "ws"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
sailfish = "0.8.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
solana-client = "1.18.16"
solana-sdk = "1.18.16"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
